--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,10 @@ purs/docset/purescript-local.docset/
 .ghc.environment.x86_64-linux-8.6.5
 .vscode
 
+#
 *.sublime-project
 *.sublime-workspace
 
 *.todo
+
+.env
